--- a/templates/create_recipe.html
+++ b/templates/create_recipe.html
@@ -20,8 +20,7 @@ New recipe
             <div class="row mb-2" id="ing_1">
                 <div class="col-auto mb-2">
                     <label class="visually-hidden" for="quantity">Cantidad</label>
-                    <input type="number" class="form-control" id="quantity" placeholder="Cantidad" name="quantity_1"
-                        min="0">
+                    <input type="number" step="0.01" min="0" class="form-control" id="quantity" placeholder="Cantidad" name="quantity_1">
                 </div>
                 <div class="col-auto mb-2">
                     <label class="visually-hidden" for="unit_1">Unidad</label>
@@ -51,7 +50,7 @@ New recipe
             <label for="recipe_instructions" class="form-label">Instrucciones</label>
             <textarea rows="7" class="form-control" id="recipe_instructions" name="recipe_instructions"></textarea>
         </div>
-        <button type="submit" class="btn btn-color">Create</button>
+        <button type="submit" class="btn btn-color">Crear</button>
 
     </form>
 
