--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -8,6 +8,7 @@ Meal plan summary
 
 <h2 class="text-center mb-5">Resumen del meal plan</h2>
 <section class="container-fluid">
+    <!-- Recipes list -->
     <div class="card mb-5">
         <div class="card-header d-flex justify-content-between">
             <h5 class="m-0 mt-1">Lista de Recetas</h5>
@@ -23,6 +24,7 @@ Meal plan summary
         </div>
     </div>
 
+    <!-- Shopping list -->
     <div class="card mb-5">
         <div class="card-header d-flex justify-content-between">
             <h5 class="m-0 mt-1">Lista de compras</h5>
@@ -81,7 +83,6 @@ Meal plan summary
 
     });
 
-        
 </script>
 
 {% endblock %}
