--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,8 +42,8 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="/create_plan">Crear plan</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/create_recipe">Nueva receta</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/search">Buscar</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/create_recipe">Crear receta</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/search">Buscar receta</a></li>
                         <li class="nav-item"><a class="nav-link" href="/edit_ingredients">Editar ingredientes</a></li>
                         <li class="nav-item"><a class="nav-link" href="/edit_units">Editar unidades</a></li>
                     </ul>
@@ -57,12 +57,11 @@
     </main>
 
     <footer class="fixed-bottom">
-
         <p class="my-2 small text-center">
             Made by <a href="https://github.com/CarolinaCampi">CC</a>
         </p>
-
     </footer>
+
     {% block script %}
 
     {% endblock %}
